Edited wiki page ServerInstall_v1 through web user interface.

--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -57,9 +57,9 @@ Consult the Disk Layout Guide before setting up your operating system. There are
 ----
 Choose the distribution you used as your base operating system and install the required applications and dependencies.
 
- * [ServerInstall_v1_Squeeze Debian Squeeze] (stable)
- * [ServerInstall_v1_Ubuntu Ubuntu 12.04 ] (stable)
- * [ServerInstall_v1_CentOS6 CentOS 6] (stable)
+ * [ServerInstall_v1_Squeeze Debian Squeeze] (testing)
+ * [ServerInstall_v1_Ubuntu Ubuntu 12.04 ] (testing)
+ * [ServerInstall_v1_CentOS6 CentOS 6] (testing)
 
 == Postgres, Bind and Resolvconf configuration ==
 ----
