--- a/wiki/ChangeLog_v1.wiki
+++ b/wiki/ChangeLog_v1.wiki
@@ -2,6 +2,7 @@
 
 == Changes==
 === RC2 === 
+ * complied CentOS6, Ubuntu12 and Debian6 doc
  * merged everything under the cif-v1 tree in github (cif-router, etc are all submodules)
  * cleaned up the installer as one automake "meta installer"
  * (libcif-dbi) split out asn, cc and rir support as non-default options (save space)
