--- a/wiki/ServerInstall_v1_MigrateApikeys.wiki
+++ b/wiki/ServerInstall_v1_MigrateApikeys.wiki
@@ -9,6 +9,7 @@ This document describes how to migrate apikeys from a v0 instance to a v1 instan
  * If you've set any "access restrictions", these will not be copied over as they've been re-architected in v1.
  * this will copy over revoked keys, be sure to do adequate testing prior to releasing into production
 == Migration ==
+ # be sure your v0 instance is updated to 0.06 (or higher)
  # log into your v0 instance as the 'cif' user
  # export the apikeys to a file
 {{{
