--- a/wiki/InstallClient_OSX_v1.wiki
+++ b/wiki/InstallClient_OSX_v1.wiki
@@ -3,7 +3,7 @@
 = Introduction =
 
  # install latest version of xcode from the app store
- # make sure the command line tools are installed via preferences
+ # make sure the command line tools are installed (via preferences, ... downloads, ... components)
  # make sure the command line tools know about it
 {{{
 sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer/
