Edited wiki page InstallClient_Debian_v1 through web user interface.

--- a/wiki/InstallClient_Debian_v1.wiki
+++ b/wiki/InstallClient_Debian_v1.wiki
@@ -17,14 +17,9 @@ $ yum install sudo vim
 ----
  # Install the base deps
 {{{
-$ sudo aptitude -y install build-essentials libdigest-sha1-perl libnet-cidr-perl libossp-uuid-perl libmodule-install-perl libregexp-common-perl libunicode-string-perl libconfig-simple-perl  libhtml-table-perl libdate-manip-perl libtry-tiny-perl libclass-accessor-perl pkg-config libnet-ssleay-perl vim libjson-xs-perl libextutils-parsexs-perl libdatetime-format-dateparse-perl libnet-patricia-perl libdatetime-perl libtext-table-perl
+$ sudo aptitude -y install build-essentials libdigest-sha1-perl libnet-cidr-perl libossp-uuid-perl libmodule-install-perl libregexp-common-perl libunicode-string-perl libconfig-simple-perl  libhtml-table-perl libtry-tiny-perl libclass-accessor-perl pkg-config libnet-ssleay-perl vim libjson-xs-perl libextutils-parsexs-perl libdatetime-format-dateparse-perl libnet-patricia-perl libdatetime-perl libtext-table-perl
 }}}
  # Install the remaining CPAN modules
 {{{
 $ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Net::SSLeay,Log::Dispatch'
 }}}
-
-
-== Continue ==
-----
-Continue with [ServerInstall_v1_RC2#Bind Bind configuration]
