Edited wiki page InstallClient_Debian_v1 through web user interface.

--- a/wiki/InstallClient_Debian_v1.wiki
+++ b/wiki/InstallClient_Debian_v1.wiki
@@ -23,3 +23,5 @@ $ sudo aptitude -y install build-essential libdigest-sha1-perl libnet-cidr-perl 
 {{{
 $ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Net::SSLeay,Log::Dispatch'
 }}}
+
+Continue with the libcif [ClientInstall_v1#Package installation]
