--- a/wiki/InstallClient_Debian_v1.wiki
+++ b/wiki/InstallClient_Debian_v1.wiki
@@ -8,12 +8,13 @@ This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base s
 
 = Details =
 == Caveats ==
+----
 === Minimal Debian ===
 Minimal Debian does not come with sudo or the normal version of vim. If you used the net boot version of the debian installer, you'll need to install these (as root):
 {{{
 $ yum install sudo vim
 }}}
-== Dependencies Installation ==
+== Dependencies ==
 ----
  # Install the base deps
 {{{
