--- a/wiki/InstallClient_Debian_v1.wiki
+++ b/wiki/InstallClient_Debian_v1.wiki
@@ -9,9 +9,10 @@ This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base s
 = Details =
 == Caveats ==
 ----
- * debian-minimal does not come with sudo or the normal version of vim. If you used the net boot version of the debian installer, you'll need to install these (as root):
+=== Debian Minimal ===
+debian-minimal does not come with sudo or the normal version of vim. If you used the net boot version of the debian installer, you'll need to install these (as root):
 {{{
-$ yum install sudo vim
+$ aptitude install sudo vim
 }}}
 == Dependencies ==
 ----
