--- a/wiki/ServerInstall_v1_Squeeze.wiki
+++ b/wiki/ServerInstall_v1_Squeeze.wiki
@@ -140,4 +140,4 @@ $ sudo /etc/init.d/rng-tools restart
 }}}
 == Continue ==
 ----
-Continue with [ServerInstall_v1_RC2#Bind Bind configuration]
+Continue with [ServerInstall_v1#Bind Bind configuration]
