Edited wiki page ServerInstall_v1_CentOS6 through web user interface.

--- a/wiki/ServerInstall_v1_CentOS6.wiki
+++ b/wiki/ServerInstall_v1_CentOS6.wiki
@@ -177,4 +177,4 @@ $ sudo chkconfig --levels 345 httpd on
 }}}
 === Continue with installation ===
 ----
-1. Continue with [ServerInstall_v1_RC2#Bind Nameserver configuration]
+1. Continue with [ServerInstall_v1#Bind Nameserver configuration]
