Edited wiki page PostgresInstall_v1 through web user interface.

--- a/wiki/PostgresInstall_v1.wiki
+++ b/wiki/PostgresInstall_v1.wiki
@@ -165,7 +165,7 @@ postgres=#\q
 
 = Continue with configuration =
 ----
-Continue with the [ServerInstall_v1_RC2#Installing_CIF Installing CIF]
+Continue with the [ServerInstall_v1#Installing_CIF Installing CIF]
 
 = Helpful References =
 ----
