Edited wiki page ServerInstall_v1_Squeeze_libcif_dbi through web user interface.

--- a/wiki/ServerInstall_v1_Squeeze_libcif_dbi.wiki
+++ b/wiki/ServerInstall_v1_Squeeze_libcif_dbi.wiki
@@ -15,7 +15,7 @@ $ aptitude install sudo vim
 }}}
 == Dependencies Installation ==
 ----
- # install the [InstallClient_v1 client]
+ # install the [ClientInstall_v1 client]
  # install the base deps
 {{{
 $ sudo aptitude -y install postgresql libclass-dbi-perl libdbd-pg-perl
