--- a/wiki/ServerInstall_v1_Squeeze_libcif_dbi.wiki
+++ b/wiki/ServerInstall_v1_Squeeze_libcif_dbi.wiki
@@ -13,7 +13,7 @@ This doc provides for the installation of a remote database client (eg: the rout
 === Minimal Debian ===
 Minimal Debian does not come with sudo or the normal version of vim. If you used the net boot version of the debian installer, you'll need to install these as root:
 {{{
-$ aptitude install sudo vim
+$ aptitude -y install sudo vim
 }}}
 == Dependencies Installation ==
 ----
@@ -29,16 +29,28 @@ $ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::DNS::Match'
 == System Setup ==
 -----
 === Default CIF user ===
-----
 Create your "cif" user/group (the configure script will default to this user "cif") that will own the application (/opt/cif).
 {{{
 $ sudo adduser --disabled-password --gecos '' cif
 }}}
 === Install Library ===
- # download the latest libcif-dbi [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+libcif-dbi package]
+ # download the latest libcif-dbi [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+libcifdbi package]
 {{{
 $ tar -xzvf libcif-v1-XXX.tar.gz
-$ cd libcif-v1-XXX
+$ cd libcif-dbi-v1-XXX
 $ ./configure && make testdeps
 $ sudo make install
+}}}
+== Examples ==
+-----
+In order for an application to leverage the CIF libraries, the '/opt/cif/lib' path must be added to the application. Other examples can be found by reviewing the perl application in /opt/cif/bin (cif, cif_apikeys, etc..).
+{{{
+#!/usr/bin/perl
+
+use strict;
+
+# fix lib paths, some may be relative
+BEGIN {
+        unshift @INC, "/opt/cif/lib";
+}
 }}}
