Edited wiki page ClientInstall_v1 through web user interface.

--- a/wiki/ClientInstall_v1.wiki
+++ b/wiki/ClientInstall_v1.wiki
@@ -27,7 +27,7 @@ A list of known [KnownIssues_v1 issues] for v1
 
 = Installation =
 == Required Dependencies ==
- * (testing) [InstallClient_Debian_v1 Debian Squeeze] 
+ * (testing) [ClientInstall_DebianSqueeze_v1 Debian Squeeze] 
  * (testing) [InstallClient_Ubuntu_v1 Ubuntu] 
  * (testing) [InstallClient_CentOS_v1 CentOS] 
  * (unstable) [InstallClient_OSX_v1 OS X] 
