--- a/wiki/ClientInstall_v1.wiki
+++ b/wiki/ClientInstall_v1.wiki
@@ -30,7 +30,7 @@ A list of known [KnownIssues_v1 issues] for v1
  * (testing) [ClientInstall_DebianSqueeze_v1 Debian Squeeze] 
  * (testing) [ClientInstall_Ubuntu12_v1 Ubuntu 12] 
  * (testing) [ClientInstall_CentOS6_v1 CentOS 6] 
- * (unstable) [InstallClient_OSX_v1 OS X] 
+ * (unstable) [ClientInstall_OSX7_v1 OSX 7] 
 == Package ==
  # download the latest [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+libcif package]
 {{{
