--- a/wiki/ServerInstall_v1_MigrateApikeys.wiki
+++ b/wiki/ServerInstall_v1_MigrateApikeys.wiki
@@ -1,23 +1,1 @@
-#summary how to migrate v0 apikeys to a v1 instance
-
-= Introduction =
-
-This document describes how to migrate apikeys from a v0 instance to a v1 instance. This doc assumes your v0 instance is at-least 0.06 or higher (in which the cif_apikeys utility includes export support for keys)
-
-= Details =
-== Caveats ==
- * If you've set any "access restrictions", these will not be copied over as they've been re-architected in v1.
- * this will copy over revoked keys, be sure to do adequate testing prior to releasing into production
-== Migration ==
- # be sure your v0 instance is updated to 0.06 (or higher)
- # log into your v0 instance as the 'cif' user
- # export the apikeys to a file
-{{{
-$ /opt/cif/bin/cif_apikeys -E > ~/v0_apikeys
-}}}
- # copy this file to your v1 instance (be sure to use SSH or some form of encrypted medium, your apikeys are in clear text)
- # login to your v1 instance as the 'cif' user
- # import the keys
-{{{
-$ /opt/cif/bin/cif_apikeys -I -L ~/v0_apikeys
-}}}
+moved to MigrateApikeys
