--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -9,7 +9,7 @@ These are our best projections as of the last 'wiki edit' date, subject to chang
  * conversion from JSON to protocol buffers
  * split up components to cif-smrt, cif-router, cif-dbi, etc...
  * inter-federation docs, templates and tools
- * see current [http://code.google.com/p/collective-intelligence-framework/wiki/ServerInstall_v1#Changes ChangeLog]
+ * see [http://code.google.com/p/collective-intelligence-framework/wiki/ServerInstall_v1#Changes ChangeLog]
 
 = Spring 2014 - v2 =
 
