--- a/wiki/CIFInfrastructureDiagram.wiki
+++ b/wiki/CIFInfrastructureDiagram.wiki
@@ -3,3 +3,8 @@
 = Introduction =
 
 Hello world
+
+<tr>
+<td align="center"><img src="http://collective-intelligence-framework.googlecode.com/files/cifv1_one_server.png" width="400"></img></td>
+<td align="center"><img src="http://collective-intelligence-framework.googlecode.com/files/cifv1_two_servers.png" width="400"></img></td>
+</tr>
